:sparkles: openapi based webservice has been implemented.
